Remove margins from h1 to prevent content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 
 @media (min-width: 300px) and (max-width: 767.98px) { 
 body {  
-    border:  2rem solid #B084CC;
+    border:  1rem solid #B084CC;
 }
 }
 
@@ -36,6 +36,14 @@ html {
     margin-left: 2.5rem;
     justify-content: center;
 }
+
+@media screen and (max-width:768px){
+  .col-sm-12{
+     width:100%;
+     margin-left: 0;
+   }
+}
+
 
 .modal {
     margin-left: 0; 
@@ -91,8 +99,6 @@ h1 {
     justify-items: center;
     font-size: 2.5rem;
     padding-top: 2rem;
-    margin-left: 2.5rem;
-    margin-right: 4rem;
     letter-spacing: 0.25rem;
     flex: nowrap;
     text-shadow: 0.1rem 0.1rem 0.1rem rgba(68, 68, 68, 0.6);
@@ -109,8 +115,8 @@ p {
 }
 
 .grid img {
-    width: 105px;
-    height: 125px;
+    width: 60px;
+    height: 70px;
     backface-visibility: hidden;
     margin: 0.5rem;
     box-shadow: 0.7rem 0.7rem 0.7rem rgba(68, 68, 68, 0.6);
